- Adding images - Adding sorting to TableItems - Reworking how the data table displays and which data is used - Fixing scrollbar issue and stickying column headers

--- a/packages/satisfactory/src/index.css
+++ b/packages/satisfactory/src/index.css
@@ -8,3 +8,11 @@
 @theme {
     --default-font-family: "Open Sans";
 }
+
+html, body, #root {
+    @apply size-full;
+}
+
+#root {
+    @apply p-4;
+}
